# veredins-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  STYLE_GUIDE.md  e do projeto, loop inicial e estrutura  main.cpp
src/: main.cpp
src/game/: game.cpp  game.h
src/game/constants/: constants.h
src/game/core/: camera.cpp  camera.h  math.cpp  math.h  types.h
src/game/element/: element.h
src/game/entities/: creature.cpp  creature.h  object.cpp  object.h  player.cpp  player.h  veredim.cpp  veredim.h
src/game/entity/: creature.h  player.cpp  player.h  veredim.cpp  veredim.h
src/game/input/: input.cpp  input.h
src/game/logic/: collision.cpp  collision.h
src/game/ui/: ui.cpp  ui.h  ui_debug.cpp  ui_fps.cpp  ui_text.cpp
src/game/world/: map.cpp  map.h  tile.cpp  tile.h
tests/: main.cpp
